--- a/python/minisab/templates/config.html
+++ b/python/minisab/templates/config.html
@@ -22,32 +22,18 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 </head>
-<body>
-    <div class="container-fluid" id="app">
-        <div class="page-header">
-            <div class="row">
-                <div class="col-md-11">
-                    <h1>Minisab <span class="badge">{{ version }}</span></h1>
-                </div>
-                <div class="col-md-2">
-                    <h1>
-                        <a class="btn btn-link btn-lg" href="{{ url_for('minisab.categories_index') }}"><span class="glyphicon glyphicon-th" aria-hidden="true"></span></a>
-                        <a class="btn btn-link btn-lg" href="{{ url_for('minisab.affiche_urls') }}"><span class="glyphicon glyphicon-th" aria-hidden="true"></span></a>
-                        <a class="btn btn-link btn-lg" href="{{ url_for('minisab.flaskconfig') }}"><span class="glyphicon glyphicon-th-large" aria-hidden="true"></span></a>
-                    </h1>
-                </div>
-            </div>
+    <body>
+        <div class="container-fluid" id="app">
+            <h1>Configuration <a href="{{ url_for('minisab.index') }}"><span class="badge">Minisab {{ version }}</span></a></h1>
+            <form>
+              {% for config_elem in config %}
+              <div class="form-group">
+                <label for="{{config_elem}}">{{config_elem}}</label>
+                <input name="{{config_elem}}" type="text" class="form-control" id="{{config_elem}}" placeholder="{{config_elem}}" value="{{config[config_elem]}}">
+              </div>
+              {% endfor %}
+              <button type="submit" class="btn btn-default" formaction="{{ url_for('minisab.flaskconfig') }}" formmethod="post">Submit</button>
+            </form>    
         </div>
-        {% include 'barre_categorie.html' %}
-        {% for categorie, items in articles %}
-            {% include 'categorie.html' %}
-            <div class="row" id="items_{{categorie.id}}">
-            {% for item in items %}
-                {% include 'article.html' %}
-            {% endfor %}
-            </div>
-            {% include 'categorie_end.html' %}
-        {% endfor %}
-    </div>
-</body>
+    </body>
 </html>
